# MiniSwitchOS

./: CMakeLists.txt  README.md  dump.rdb
agents/log_agent/: CMakeLists.txt  main.cpp
agents/port_agent/: CMakeLists.txt  main.cpp
hal/: CMakeLists.txt  main.cpp
mgmt/: cli.py  requirements.txt
procmgr/: CMakeLists.txt  main.cpp
sdk/: AgentBase.cpp  AgentBase.hpp  CMakeLists.txt  StateDB.cpp  StateDB.hpp
